Changed the RoomController to return RoomDTO instead of room entity class and improved code quality by returning ResponseEntities and some exception handling