@@ -1,5 +1,6 @@
 package at.technikum.boutiquehotel.controller;
 
+import at.technikum.boutiquehotel.dto.ReservationConfirmationDTO;
 import at.technikum.boutiquehotel.dto.ReservationDTO;
 import at.technikum.boutiquehotel.entities.Guest;
 import at.technikum.boutiquehotel.entities.Reservation;
@@ -9,57 +10,69 @@ import at.technikum.boutiquehotel.services.GuestService;
 import at.technikum.boutiquehotel.services.ReservationService;
 import at.technikum.boutiquehotel.services.RoomService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/reservation")
 public class ReservationController {
 
+    private final ReservationService reservationService;
+    private final GuestService guestService;
+    private final RoomService roomService;
+
     @Autowired
-    private ReservationService reservationService;
-    @Autowired
-    private GuestService guestService;
-    @Autowired
-    private RoomService roomService;
+    public ReservationController(ReservationService reservationService, GuestService guestService, RoomService roomService) {
+        this.reservationService = reservationService;
+        this.guestService = guestService;
+        this.roomService = roomService;
+    }
 
     @PostMapping
-    private Reservation createReservation(@RequestBody ReservationDTO reservation) {
-        Reservation newReservation = mapToEntity(reservation);
-        return reservationService.save(newReservation);
+    public ResponseEntity<ReservationDTO> createReservation(@RequestBody ReservationDTO reservationDTO) {
+        Reservation newReservation = mapToEntity(reservationDTO);
+        Reservation savedReservation = reservationService.save(newReservation);
+        return ResponseEntity.status(HttpStatus.CREATED).body(mapToDTO(savedReservation));
     }
 
     @GetMapping
-    private List<ReservationDTO> getAllReservations(){
+    public ResponseEntity<List<ReservationDTO>> getAllReservations() {
         List<Reservation> reservations = reservationService.findAll();
-        List<ReservationDTO> reservationDTOs = new ArrayList<>();
-        reservations.forEach((reservation) -> reservationDTOs.add(mapToDTO(reservation)));
-        return reservationDTOs;
+        List<ReservationDTO> reservationDTOs = reservations.stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(reservationDTOs);
     }
 
-    @GetMapping
-    private ReservationConfirmationDTO getReservationConfirmationByReservationId(@RequestParam long reservationId) {
-        ReservationConfirmationDTO reservationConfirmationDTO = new ReservationConfirmationDTO();
-
-        // get all relevant details for the confirmation page from the services
+    @GetMapping("/confirmation")
+    public ResponseEntity<ReservationConfirmationDTO> getReservationConfirmationByReservationId(@RequestParam long reservationId) {
         Reservation reservation = reservationService.findById(reservationId);
+        if (reservation == null) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
+
         Guest guest = reservation.getGuest();
         Room room = reservation.getRoom();
 
+        ReservationConfirmationDTO reservationConfirmationDTO = new ReservationConfirmationDTO();
         reservationConfirmationDTO.setBeds(room.getBeds());
-        reservationConfirmationDTO.setExtras(room.getRoomExtras().stream().map(RoomExtras::getExtraType).toList());
+        reservationConfirmationDTO.setExtras(room.getRoomExtras().stream().map(RoomExtras::getExtraType).collect(Collectors.toList()));
         reservationConfirmationDTO.setRoomType(room.getRoomType());
         reservationConfirmationDTO.setGuest(guest);
         reservationConfirmationDTO.setPrice(room.getPrice());
         reservationConfirmationDTO.setBreakfastOption(reservation.isBreakfastOption());
         reservationConfirmationDTO.setCheckInDate(reservation.getCheckInDate());
         reservationConfirmationDTO.setCheckOutDate(reservation.getCheckOutDate());
-        return reservationConfirmationDTO;
+
+        return ResponseEntity.ok(reservationConfirmationDTO);
     }
 
-    // mapping methods
+    // Mapping methods
     private Reservation mapToEntity(ReservationDTO dto) {
         Reservation reservation = new Reservation();
         reservation.setGuest(guestService.findById(dto.getGuestId()));
